# RIA-R200-ROBOT-PC

deb/: ros-melodic-r200-teleop_0.1.0-0bionic_amd64.deb
gaitech_r100/: CMakeLists.txt  package.xml
gaitech_r100/include/: janus-rc-cpp-0.3.6-Linux.deb
gaitech_r100/include/gaitech_r100/: R100BTJoy.h  R100Robot.h  R100RosLogger.h
gaitech_r100/launch/: btjoystick.launch  r100.launch  r100_with_btjoy.launch  r200_driver.launch
gaitech_r100/params/: r100_kinco.config
gaitech_r100/src/: R100BTJoy.cpp  R100Robot.cpp  R100RosLogger.cpp  failsafe.cpp  gaitech_r100_btjoystick.cpp  gaitech_r100_node.cpp
r200_bringup/: CMakeLists.txt  package.xml
r200_bringup/config/: reset_rosconsole.conf  standalone.yaml  twist_mux.yaml
r200_bringup/include/: external_vel_smoother.launch.xml  robot_localization.launch.xml  teleop_vel_smoother.launch.xml
r200_bringup/launch/: r200_bringup.launch
r200_bringup/scrips/: disable_auto_bringup.sh  enable_auto_bringup.sh
r200_description/: CMakeLists.txt  package.xml
r200_description/launch/: r200_description.launch  r200_description_static.launch
r200_description/meshes/: top_plate.stl  wheel.stl
r200_description/urdf/: materials.urdf.xacro  property.urdf.xacro  r200.urdf.xacro  r200_static.urdf.xacro  wheels.urdf.xacro  wheels_static.urdf.xacro
r200_imu/: CMakeLists.txt  package.xml
r200_imu/config/: ROVER-R200-V1.params  apm_pluginlists.yaml
r200_imu/include/r200_imu/: set_rate.h
r200_imu/launch/: r200_imu.launch
r200_imu/src/: r200_imu_node.cpp  set_rate.cpp
rules/: RiaControllers.rules  RiaIMU.rules
