<?xml version="1.0"?>
<package format="2">
  <name>r200_imu</name>
  <version>0.1.0</version>
  <description>R200 imu package</description>

  <maintainer email="chenlinkai@gaitechrobotics.com">Leo Chen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export></export>
</package>
